--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -348,7 +348,7 @@ a.anchor:hover, a.anchor:focus{
     /* transition: transform 200ms ease-in-out; */
     font-weight: 500;
 }
-.btn:hover, .btn:focus {
+.btn:hover, .btn:focus, .btn:active{
     background-color: var(--clr-white);
     color: var(--clr-theme-4);
     /* transform: scale(1.05); */
