--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@
     --clr-grey-3: hsl(0, 0%, 80%);
     --clr-grey-4: hsl(204, 2%, 48%);
 
-    --clr-theme-1:hsl(198, 14%, 86%);
+    --clr-theme-0:hsl(196, 100%, 96%);
+    --clr-theme-1:hsl(197, 47%, 90%);
     --clr-theme-2:hsl(200, 24%, 66%);
     --clr-theme-3:hsl(200, 44%, 59%);
     --clr-theme-4:hsl(200, 55%, 54%);
@@ -278,7 +279,7 @@ li.nav-item:last-child {
     transition: translate 300ms ease-in-out;
 }
 li.nav-item:last-child:hover {
-    background-color:var(--clr-theme-4);
+    background-color:var(--clr-theme-3);
     translate: 0em -0.25em;
     /* box-shadow: 5px 5px 5px 0px var(--clr-theme-5); */
 }
@@ -670,6 +671,9 @@ section + section{
 } */
 
 /* faq section */
+section.faq-section {
+    background-color: var(--clr-theme-0);
+}
 .faq-row {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
@@ -723,7 +727,12 @@ h2.faq-heading {
 .single-accordion-body{
     padding: 1rem 1.25rem;
 }
-
+section p:first-of-type{
+    margin-bottom:unset;
+    }
+    .faq-description {
+        color: var(--clr-grey-4);
+    }
 @media (max-width:800px) {
     .faq-row {
         flex-direction:column;
