--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1155,61 +1155,36 @@ text-align:center;
 /* transformations page */
 
 /* our services program */
-/* .services{
-    display: flex;
-    gap: 2rem;
-    justify-content: space-evenly;
-    text-align: center;
-
-}
-.ind-services{
-    flex: 1;
-}
-
-.ind-services {
-   margin-bottom:2rem;
-   padding: 1rem;
-   border-radius: 10px;
-   border: 1px var(--clr-grey-2) solid;
-}
-.services-image svg {
-    max-width: 5em; 
-    max-height:clamp(3em, 10vw, 5em)
-}
-@media (max-width:800px) {
-    .services{
-        flex-direction: column;
-    }
-} */
-
-/* new */
 .services {
     display: flex;
-    /* align-items: center; */
-    justify-content: space-evenly;
-    gap: 3%;
+    gap: 4%;
 }
 
 .ind-services {
-    flex-basis: 100%;
-    flex-grow: 1;
-    border: 1px lightgrey solid;
-    padding: 5px;
-}
-.ind-services p{
-    height: 100px;
+    flex: 1;
+    background-color: var(--clr-theme-1);
+    text-align: center;
+    border-radius: 30%;
+    aspect-ratio: 1 / 1;
+    padding-block: 4%;
     
 }
-
-.services-image img {
-    max-height: 300px;
-    max-width: 100%;
-    width: 100%;
-    object-fit: cover;
+.services-heading{
+    margin-bottom: 40px;
+}
+.ind-services  svg{ 
+    width:50px;
+    /* padding-block:15%; */
 }
 @media (max-width:800px) {
     .services{
         flex-direction: column;
+        align-items: center;
+        gap: 16px;
+    }
+    .ind-services {
+        width: 60%;
+        padding-block: 10%;
     }
 }
 /* our services program */
