--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -776,14 +776,14 @@ h2.faq-heading {
     text-align: center;
     display: block;
 }
-/* .get-started-section {
-    background-image: url(/assets/images/self/IMG_0238-flipped-horizontal.jpg);
+.get-started-section {
+    background-image: url(/assets/images/self/IMG_0156-flipped-horizontal.jpg);
     background-position-y: 33%;
   background-repeat: no-repeat; 
   background-size: cover;
    background-color:hsl(196deg 31.24% 79.39%);
   background-blend-mode: overlay;
-} */
+}
 a.btn.large {
     padding: 1rem 3rem;
     font-size: large;
@@ -1092,15 +1092,16 @@ div.home-page-get-started-form form
         width: 50%;
     }   
 }
-.home-page-get-started-form-and-content {
+/* .home-page-get-started-form-and-content {
     background-image: url(/assets/images/self/IMG_0238-flipped-horizontal.jpg);
     background-position: center;
   background-repeat: no-repeat; 
   background-size: cover; 
   border-radius: 12px;
-}
+} */
 .get-started-section h3{
-margin-block: 4rem;
+margin-top: 4rem;
+margin-bottom:2rem;
 }
 @media (max-width:767px) {
     .home-page-get-started-form-and-content {
